<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="ST_ReqBeamParams" Id="{14e735f9-8011-0161-1404-85d973685470}">
    <Declaration><![CDATA[TYPE ST_ReqBeamParams :
STRUCT
	// Beam parameters
	
	//Note: fAtt is a local parameter, meaning it is distributed to the nearest
	// upstream attenuator component.
	fAtt : REAL := 100; //Requested attenuation %
	
	//Machine parameters
	nBeamClass	:	BYTE := 16#F;
	nRate	:	UDINT	:= 10; //Pulse-rate
	fPP_mJ : REAL := 20; //Per pulse max energy (mJ)
	
	{attribute 'displaymode':='binary'}
	neVPermRange	:	WORD	:= 2#1111_1111_1111_1111; //Valid photon energy ranges
		//1.5-0keV subdivided per bit
	(*
	0.0-0.2 - 0 (lsb)
	0.2-0.3 - 1
	0.3-0.4 - 2
	0.4-0.5 - 3
	0.5-0.6 - 4
	0.6-0.7 - 5
	0.7-0.8 - 6
	0.8-0.9 - 7
	0.9-1.0 - 8
	1.0-1.1 - 9
	1.1-1.2 - 10
	1.2-1.3 - 11
	1.3-1.4 - 12
	1.4-1.5 - 13 (msb)
	na - 14
	na - 15
	*)

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>