<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <GVL Name="PMPS_GVL_BeamParams" Id="{5a450348-77b6-4641-9076-b559eb3a0be9}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	stReqFBDBeamParamsSum	:	ST_BeamParams;
	stReqMethBeamParamSum	:	ST_BeamParams;
	stCurrentBeamParameters	:	ST_BeamParams;
END_VAR
VAR_GLOBAL CONSTANT
	cstFullBeam	:	ST_BeamParams := (
		fAtt := 0,
		fPP_mJ := 1E4,
		neVReqRange := 2#1111_1111_1111_1111,
		nRate	:= UDINT#1000000
		
);
	cstSafeBeam	:	ST_BeamParams := (
		fAtt := 100,
		fPP_mJ := 0,
		neVReqRange := 0,
		nRate	:= 0
);
	cnMaxStateArrayLen : INT := 20;
	
	MAX_ASSERIONS	:	UDINT := 100; //Maximum number of assertions permitted in the arbiter
	
	g_cBoundaries	:	INT	:= 15;
	g_areVBoundaries	:	ARRAY [0..g_cBoundaries]	OF	REAL	:= [
	0.2,
	0.3,
	0.4,
	0.5,
	0.6,
	0.7,
	0.8,
	0.9,
	1.0,
	1.1,
	1.2,
	1.3,
	1.4,
	1.5,
	1.6
];
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>