<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <POU Name="F_DiffReqBeamParams" Id="{96a333be-fa67-002f-2f1c-a742de122333}" SpecialFunc="None">
    <Declaration><![CDATA[(*Compares BeamParam1 to BeamParam2, if any parameters of BeamParam1 are different than BeamParam2
the result will be true *)
FUNCTION F_DiffReqBeamParams : BOOL
VAR_INPUT
	BeamParam1	:	ST_ReqBeamParams;
	BeamParam2	:	ST_ReqBeamParams;
END_VAR
VAR
	// Internal Attenuation OK boolean
	xAttOK: BOOL := FALSE;
	// Internal Per-pulse energy OK boolean
	xPPmjOK: BOOL := FALSE;
	// Internal photon energy OK boolean
	xEvOK: BOOL := FALSE;
	xRateOK: BOOL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[xAttOK := BeamParam1.fAtt <> BeamParam2.fAtt;
xPPmjOK := BeamParam1.fPP_mJ <> BeamParam2.fPP_mJ;
xEvOK := BeamParam1.neVPermRange <> BeamParam2.neVPermRange;
xRateOK	 := BeamParam1.nRate <> BeamParam2.nRate;


F_DiffReqBeamParams := xAttOK OR xPPmjOK OR xEvOK OR xRateOK;]]></ST>
    </Implementation>
    <LineIds Name="F_DiffReqBeamParams">
      <LineId Id="8" Count="0" />
      <LineId Id="21" Count="1" />
      <LineId Id="39" Count="0" />
      <LineId Id="9" Count="1" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>